Fixed cards align, added time functions example

--- a/src/scss/parallax.scss
+++ b/src/scss/parallax.scss
@@ -50,13 +50,11 @@
 
       background-color: white;
     }
-    .card:nth-child(odd) { border: 4px solid red; }
-    .card:nth-child(even) { border: 4px solid black; }
+    .card:nth-child(odd) { border: 4px solid red; right: (3 * 2) + 0%; }
+    .card:nth-child(even) { border: 4px solid black; left: (3 * 2) + 0%; }
 
     @for $i from 1 to 7 {
       .card--#{$i} { top: ($i * 45) + 0%; }
-      .card:nth-child(odd) { right: ($i * 2) + 0%; }
-      .card:nth-child(even) { left: ($i * 2) + 0%; }
     }
   }
 
